<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="opensource.zeocompanion.MainActivity">

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="ifRoom" />

    <item
      android:id="@+id/action_settings"
      android:orderInCategory="200"
      android:title="@string/action_settings"
      app:showAsAction="never" />

    <item
        android:id="@+id/action_alerts"
        android:orderInCategory="201"
        android:title="@string/action_alerts"
        android:icon="@drawable/ic_warning_yellow_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_email_outbox"
        android:orderInCategory="202"
        android:title="@string/action_email_outbox"
        android:icon="@drawable/ic_markunread_mailbox_yellow_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_maintAttribs"
        android:orderInCategory="300"
        android:title="@string/action_maintAttribs"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_maintDoings"
        android:orderInCategory="301"
        android:title="@string/action_maintDoings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_factoryDefaults"
        android:orderInCategory="302"
        android:title="@string/action_factoryDefaults"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_backupDB"
        android:orderInCategory="400"
        android:title="@string/action_backupDB"
        android:icon="@drawable/ic_archive_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_restoreDB"
        android:orderInCategory="401"
        android:title="@string/action_restoreDB"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_headband"
        android:orderInCategory="900"
        android:title="@string/action_headband"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_user_guide"
        android:orderInCategory="980"
        android:title="@string/action_user_guide"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_emailErrorLog"
        android:orderInCategory="990"
        android:title="@string/action_emailErrorLog"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="999"
        android:title="@string/action_about"
        app:showAsAction="never" />


</menu>
