<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="export_directory_CSV"
        android:title="CSV Export storage directory"
        android:summary="Optional: External storage directory for CSV exports: %s"
        android:defaultValue="Android/data/opensource.zeocompanion/exports"
        android:entries="@array/exportDirectory"
        android:entryValues="@array/exportDirectory" />

    <ListPreference
        android:key="export_directory_image"
        android:title="Image Export storage directory"
        android:summary="Optional: External storage directory for image exports: %s"
        android:defaultValue="Android/data/opensource.zeocompanion/exports"
        android:entries="@array/exportDirectory"
        android:entryValues="@array/exportDirectory" />

    <SwitchPreference
        android:key="export_attribute_useExportNameInColumnHeader"
        android:title="@string/pref_title_export_attribute_useExportNameInColumnHeader"
        android:summary="@string/pref_summary_export_attribute_useExportNameInColumnHeader"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="export_value_exportIncludeValueText"
        android:title="@string/pref_title_export_value_exportIncludeValueText"
        android:summary="@string/pref_summary_export_value_exportIncludeValueText"
        android:defaultValue="true" />

</PreferenceScreen>
